--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
 <footer>
-&copy; 2016 Walang Wagi Sa Yosi. All the contents on this site are protected by copyright law.
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        &copy; 2016 Walang Wagi Sa Yosi. All the contents on this site are protected by copyright law.
+      </div>
+    </div>
+  </div>
 </footer>
