--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-12 text-center">
         &copy; 2016 Walang Wagi Sa Yosi. All the contents on this site are protected by copyright law.
       </div>
     </div>
