--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="{% if page.title %}{{ ' static ' }}{% else %}{{ ' ' }}{% endif %}">
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav id="km-navbar" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand">
-          <img class="visible-xs" src="{{ site.baseurl }}/images/lungs-monoline.png">
+          <img class="hidden" src="{{ site.baseurl }}/images/lungs-monoline.png">
           <span>#SmokeFreePH</span>
         </a>
       </div>
