--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
   {% include head.html %}
 
-    <body>
+    <body {% if page.home %} data-spy="scroll" data-target="#km-navbar" {% endif %}>
 
 		{% include header.html %}
 
