--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,14 +9,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="{{ site.baseurl }}#top">
           <img class="hidden" src="{{ site.baseurl }}/images/lungs-monoline.png">
           <span>#SmokeFreePH</span>
         </a>
       </div>
 
       <div class="km-navbar-brand hidden-xs">
-        <a><img src="{{ site.baseurl }}/images/logo-full.png"></a>
+        <a href="{{ site.baseurl }}#top"><img src="{{ site.baseurl }}/images/logo-full.png"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
