--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,3 +7,21 @@
     </div>
   </div>
 </footer>
+
+{% if page.home %}
+
+<!--
+<div id="mc_embed_signup">
+  <form action="//smokefree.us12.list-manage.com/subscribe/post?u=16755c71e8f4796a87827e0f6&amp;id=f1abc02894" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+          	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+      	    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_16755c71e8f4796a87827e0f6_f1abc02894" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default km-btn"></div>
+    </div>
+  </form>
+</div>
+-->
+
+{% endif %}
+<!--End mc_embed_signup-->
