--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,7 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.min.css">
 	{% include css-fonts.html %}
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/slick.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/custom-slick.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/custom-subscription.css">
