--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="{% if page.title %}{{ ' static ' }}{% else %}{{ ' ' }}{% endif %}">
-  <nav id="km-navbar" class="navbar navbar-default navbar-fixed-top">
+<header class="">
+  <nav id="km-navbar" class="navbar navbar-default navbar-fixed-top {% if page.navHide %}{{ ' ' }}{% else %}{{ ' navbar-normalize ' }}{% endif %}">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -10,12 +10,12 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="{{ site.baseurl }}#top">
-          <img class="hidden" src="{{ site.baseurl }}/images/lungs-monoline.png">
+          <img class="visible-xs img-brand" src="{{ site.baseurl }}/images/lungs-monoline.png" >
           <span>#SmokeFreePH</span>
         </a>
       </div>
 
-      <div class="km-navbar-brand hidden-xs">
+      <div class="km-navbar-brand hidden-sm hidden-xs">
         <a href="{{ site.baseurl }}#top"><img src="{{ site.baseurl }}/images/logo-full.png"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,6 +24,7 @@
           <li><a href="{{ site.baseurl }}#stories">Stories</a></li>
           <li><a href="{{ site.baseurl }}#about">About</a></li>
           <li><a href="{{ site.baseurl }}#info">Info</a></li>
+          <li><a class="btn btn-default btn-subscribe km-btn" target="_blank" href="http://eepurl.com/bVGXOj">Subscribe</a></li>
           <li class="hidden"><a href="{{ site.baseurl }}#social">Social</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
