--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-    <body {% if page.home %} class="body-allocate-bottom" data-spy="scroll" data-target="#km-navbar" {% endif %}>
+    <body class="{% if page.allocateTop %}{{ 'body-allocate-top ' }}{% endif %}{% if page.allocateBottom %}{{ 'body-allocate-bottom ' }}{% endif %}" {% if page.home %} data-spy="scroll" data-target="#km-navbar" {% endif %}>
 
 		{% include header.html %}
 
