--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,12 @@
 <footer>
   <div class="container-fluid">
     <div class="row">
+      <!--div class="col-lg-12">
+        <a target="_blank" href="https://www.facebook.com/WalangWagiSaYosi/">
+          <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        </a>
+      </div-->
+
       <div class="col-lg-12 text-center">
         &copy; 2016 Walang Wagi Sa Yosi. All the contents on this site are protected by copyright law.
       </div>
