--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{ site.baseurl }}#top">
+        <a class="navbar-brand" href="{% if page.home != true %}{{ site.baseurl }}{{ '/' }}{% else %}{{ '/#top' }}{% endif %}">
           <img class="visible-xs img-brand" src="{{ site.baseurl }}/images/lungs-monoline.png" >
           <span>#SmokeFreePH</span>
         </a>
