--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-row-eq-height.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.min.css">
 	{% include css-fonts.html %}
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/slick.css">
