Animations, styling for Info, href fixes

--- a/_includes/panel-story.html
+++ b/_includes/panel-story.html
@@ -1,5 +1,5 @@
-<a class="anchor-stories" href="{{ site.baseurl }}/story">
-  <div class="panel panel-default panel-stories">
+<a class="anchor-stories" href="{{ site.baseurl }}/stories/story">
+  <div class="panel panel-default panel-stories wow fadeInDown {% if modulo == 2 %} delay-200{% elsif modulo == 0 %} delay-400{% endif %}">
     <div class="panel-heading">
       <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
       <h3 class="h3-stories">Lorem ipsum dolor</h3>
