--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,10 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.min.css">
 	{% include css-fonts.html %}
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/slick.css">
+	{% if page.animate %}
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/animate.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/animate-custom.css">
+	{% endif %}
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/custom-slick.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/custom-subscription.css">
